--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-floating-whatsapp": "^5.0.8",
     "sharp": "^0.33.3",
+    "swiper": "^11.2.5",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
