New pages created

--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^6.0.0",
     "@googlemaps/js-api-loader": "^1.16.6",
+    "@iconify/json": "^2.2.317",
     "@playform/compress": "^0.1.7",
     "@react-google-maps/api": "^2.19.3",
     "astro": "^5.4.0",
     "astro-embed": "^0.7.2",
+    "astro-icon": "^1.1.5",
     "astro-seo": "^0.8.3",
-    "framer-motion": "^11.1.9",
-    "gsap": "^3.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-floating-whatsapp": "^5.0.8",
