--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/react": "^4.2.0",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^6.0.0",
+    "@fontsource/poppins": "^5.2.5",
     "@googlemaps/js-api-loader": "^1.16.6",
     "@iconify/json": "^2.2.317",
     "@playform/compress": "^0.1.7",
